--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<% if current_user.photo.attached? %>
+  <%= cl_image_tag current_user.photo.key, height: 300, width: 400, crop: :fill %>
+<% end %>
