--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,37 +1,53 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class ="left-side">
+      <% if user_signed_in? %>
+        <%= link_to events_path do %>
+          <div class="navbar-brand d-flex gap-2 align-items-center">
+                <%= image_tag "logo.png", alt: "TeamUp", width: 200 %>
+          </div>
+        <% end %>
+      <% else %>
+        <%= link_to root_path do %>
+          <div class="navbar-brand d-flex gap-2 align-items-center">
+            <h3 class="m-0">Find a </h3>
+              <%= image_tag "plus-one-icon.png", alt: "PlusOne", width: 200 %>
+          </div>
+        <% end %>
+      <% end %>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+
+    <div class="collapse navbar-collapse d-flex gap-2" id="navbarSupportedContent">
+      <% if user_signed_in? %>
+        <%= link_to "Create your event", new_event_path, class: "btn btn-warning" %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-warning" %>
+        <%= link_to "Log in", new_user_session_path, class: "btn btn-warning" %>
+      <% end %>
+
       <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
+
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
+            <% if user_signed_in? %>
+              <% if current_user.photo.attached? %>
+                <%= cl_image_tag current_user.photo.key, width: 40, height: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, crop: :thumb, gravity: :face %>
+              <% else %>
+                <%= image_tag "placeholder.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+              <% end %>
+            <% end %>
+
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              <%= link_to "Dashboard", '#', class: "dropdown-item" %>
+              <%= link_to "View Events", events_path, class: "dropdown-item" %>
+              <%= link_to "Create Event", new_event_path, class: "dropdown-item" %>
+              <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" }, class: "dropdown-item" %>
             </div>
           </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
       </ul>
     </div>
   </div>
