--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,8 @@
       <% else %>
         <%= link_to root_path do %>
           <div class="navbar-brand d-flex gap-2 align-items-center">
-            <h3 class="m-0">Find a </h3>
-              <%= image_tag "plus-one-icon.png", alt: "PlusOne", width: 200 %>
+            <h3 class="m-0">TeamUp.fun</h3>
+              <%= image_tag "logo.png", alt: "TeamUp", width: 200 %>
           </div>
         <% end %>
       <% end %>
