--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<p>Here is the landing page for TeamUp.fun!</p>
 
 <% if current_user.photo.attached? %>
   <%= cl_image_tag current_user.photo.key, height: 300, width: 400, crop: :fill %>
