--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -28,11 +28,16 @@
                           autofocus: true %>
             </div>
             <div class="mb-3 form-inputs">
+              <%= f.input :photo, as: :file %>
+            </div>
+            <div class="mb-3 form-inputs">
               <%= f.input :toggle_attribute,
                           as: :boolean,
                           label: 'Private event?' %>
             </div>
-
+            <div class="text-center form-actions">
+              <%= f.button :submit, "Create Group", class: "btn btn-primary btn-lg" %>
+            </div>
           <% end %>
 
         </div>
