--- a/app/views/events/_info_window.html.erb
+++ b/app/views/events/_info_window.html.erb
@@ -1,2 +1,3 @@
 <h2><%= event.title %></h2>
 <p><%= event.address %></p>
+<%= link_to 'Check Event', event_path(event), :class  => "btn btn-primary" %>
