completed create group task

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -28,10 +28,7 @@
                           autofocus: true %>
             </div>
             <div class="mb-3 form-inputs">
-              <%= f.input :photo, as: :file %>
-            </div>
-            <div class="mb-3 form-inputs">
-              <%= f.input :toggle_attribute,
+              <%= f.input :private,
                           as: :boolean,
                           label: 'Private event?' %>
             </div>
