made navbar sticky

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-lg-6 col-md-8">
       <div class="card bg-light shadow">
         <div class="card-body">
-          <h1 class="card-title text-center mb-4">Create Event</h1>
+          <h3 class="card-title text-center mb-4">CREATE A NEW GROUP</h3>
 
           <%= simple_form_for(@group) do |f| %>
             <%= f.error_notification %>
