--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -45,6 +45,7 @@
               <%= link_to "Dashboard", '#', class: "dropdown-item" %>
               <%= link_to "View Events", events_path, class: "dropdown-item" %>
               <%= link_to "Create Event", new_event_path, class: "dropdown-item" %>
+              <%= link_to "Create Group", new_group_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" }, class: "dropdown-item" %>
             </div>
           </li>
