photos now dont disapear when event gets updated

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,6 +7,6 @@
 
 <div class="d-flex justify-content-center">
   <% @events.each do |event| %>
-    <%= render "card", event: event %>
+    <%= render "shared/card", event: event %>
   <% end %>
 </div>
