--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Hello from the Edit the Event Page</h1>
 
-<%= simple_form_for @event do |f| %>
+<%= simple_form_for @event, html: { multipart: true } do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :start_date, as: :datetime %>
