--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,3 +33,30 @@
 <% @event.bookings.each do |booking| %>
   <h4><%= booking.user.first_name %></h4>
 <% end %>
+
+
+
+<%# ############# Chatroom ##############%>
+<h4>Chatroom ID: <%= @event.chatroom.id %></h4>
+<div class="container chatroom"
+  data-controller="chatroom-subscription"
+  data-chatroom-subscription-chatroom-id-value="<%= @event.chatroom.id %>"
+>
+  <h1>#<%= @event.chatroom.name %></h1>
+
+  <div class="messages" data-chatroom-subscription-target="messages">
+  <% @event.chatroom.messages.each do |message| %>
+    <%= render "messages/message", message: message %>
+  <% end %>
+</div>
+
+<%= simple_form_for [@event, @event.chatroom, @message],
+  html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f|
+%>
+  <%= f.input :content,
+    label: false,
+    placeholder: "Message ##{@event.chatroom.name}",
+    wrapper_html: {class: "flex-grow-1"}
+  %>
+  <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+<% end %>
