--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -4,39 +4,7 @@
       <div class="card bg-light shadow">
         <div class="card-body">
           <h3 class="card-title text-center mb-4">CREATE A NEW GROUP</h3>
-
-          <%= simple_form_for(@group) do |f| %>
-            <%= f.error_notification %>
-
-            <div class="mb-3 form-inputs">
-              <%= f.input :title,
-                          required: true %>
-            </div>
-            <div class="mb-3 form-inputs">
-              <%= f.input :description,
-                          required: true %>
-            </div>
-            <div class="mb-3 form-inputs">
-              <%= f.input :city,
-                          required: true %>
-            </div>
-            <div class="mb-3 form-inputs">
-              <%= f.input :category,
-                          collection: @categories,
-                          prompt: "Select a category",
-                          required: true,
-                          autofocus: true %>
-            </div>
-            <div class="mb-3 form-inputs">
-              <%= f.input :private,
-                          as: :boolean,
-                          label: 'Private event?' %>
-            </div>
-            <div class="text-center form-actions">
-              <%= f.button :submit, "Create Group", class: "btn btn-primary btn-lg" %>
-            </div>
-          <% end %>
-
+              <%= render "shared/group_form" %>
         </div>
       </div>
     </div>
