--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :first_name %>
     <%= f.input :last_name %>
-    <%= f.input :user_name %>
+    <%= f.input :nickname %>
     <%= f.input :city %>
     <%= f.input :photo, as: :file %>
     <%= f.input :email,
