--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,13 +41,18 @@
 <div class="container chatroom"
   data-controller="chatroom-subscription"
   data-chatroom-subscription-chatroom-id-value="<%= @event.chatroom.id %>"
->
+  data-chatroom-subscription-current-user-id-value="<%= current_user.id %>">
+
   <h1>#<%= @event.chatroom.name %></h1>
 
   <div class="messages" data-chatroom-subscription-target="messages">
   <% @event.chatroom.messages.each do |message| %>
-    <%= render "messages/message", message: message %>
-  <% end %>
+  <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
+    <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+      <%= render "messages/message", message: message %>
+    </div>
+  </div>
+<% end %>
 </div>
 
 <%= simple_form_for [@event, @event.chatroom, @message],
