--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,24 @@
-<h1>Hello from the Dashboard</h1>
+<div class="container">
+  <div class="welcome-header">
+    <div class="user-img">
+      <% if current_user.photo.attached? %>
+        <%= cl_image_tag current_user.photo.key, height: 400, width: 600, crop: :fill %>
+      <% else %>
+        <%= image_tag "placeholder.png" %>
+      <% end %>
+    </div>
+    <div class="welcome-msg">
+      <h2>Welcome, <%= current_user.first_name.capitalize %> 👋 </h2>
+    </div>
+    <div class="user-profile">
+      <ul>
+        <li> <i class="fa-solid fa-user"></i> <%= current_user.nickname.capitalize %> </li>
+        <li> <i class="fa-solid fa-location-dot"></i> <%= current_user.city.capitalize %> </li>
+        <li> <i class="fa-solid fa-ticket"></i> Attended 3 Events</li>
+      </ul>
+      <h5>Your Bio</h5>
+      <p> <%= current_user.bio %> </p>
+    </div>
+    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
+  </div>
+</div>
