join group button

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,5 +7,5 @@
 @import "auto_complete";
 @import "group_form";
 @import 'home_banner';
-@import 'chatroom'
-
+@import 'chatroom';
+@import "group_info";
