--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,1 +1,11 @@
-<h2><%= @group.title %></h2>
+<div class="container">
+  <% if @group.photo.attached? %>
+    <%= cl_image_tag @group.photo.key, class: "img-fluid", crop: :fill %>
+    <% else %>
+    <img style="width: 100%" src="https://placehold.co/900x600" alt="main image">
+  <% end %>
+  <h1><strong><%= @group.title %></strong></h1>
+  <div class="group-info">
+    <%= render "shared/group_info" %>
+  </div>
+</div>
