updated navbar dropdown links

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
     <% end %>
 
     <%= f.input :password,
-                hint: "leave field blank if you don't want to change your password",
+                hint: "Leave field blank if you don't want to change your password",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
