--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,10 +42,16 @@
             <% end %>
 
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Dashboard", '#', class: "dropdown-item" %>
-              <%= link_to "View Events", events_path, class: "dropdown-item" %>
+              <%= link_to "Home", dashboard_path, class: "dropdown-item" %>
+              <%= link_to "Messages", dashboard_path, class: "dropdown-item" %>
+              <hr>
+              <%= link_to "Your Events", events_path, class: "dropdown-item" %>
               <%= link_to "Create Event", new_event_path, class: "dropdown-item" %>
+              <hr>
+              <%= link_to "Your Groups", groups_path, class: "dropdown-item" %>
               <%= link_to "Create Group", new_group_path, class: "dropdown-item" %>
+              <hr>
+              <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" }, class: "dropdown-item" %>
             </div>
           </li>
