--- a/app/assets/stylesheets/components/_group_description.scss
+++ b/app/assets/stylesheets/components/_group_description.scss
@@ -1,12 +1,9 @@
-.group-info {
+.group-description {
   background-color: lightgrey;
+  margin-top: 25px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 8px;
   padding-bottom: 5px;
   border-radius: 5px;
-}
-
-.btn {
-  margin-bottom: 8px;
 }
