--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,4 +8,7 @@
   <div class="group-info">
     <%= render "shared/group_info" %>
   </div>
+  <div class="group-description">
+    <%= render "shared/group_description" %>
+  </div>
 </div>
