created dashboard sections

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -21,4 +21,24 @@
     </div>
     <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
   </div>
+
+  <hr>
+
+  <div class="user-events">
+    <h3>Your Upcoming Events</h3><%= link_to "View All Events", edit_user_registration_path, class: "btn btn-primary" %>
+
+    <p>display list of user top upcoming events</p>
+
+  </div>
+
+  <hr>
+
+  <div class="user-events">
+    <h3>Your Groups</h3><%= link_to "View All Groups", edit_user_registration_path, class: "btn btn-primary" %>
+
+    <p>display list of top 4 groups</p>
+
+  </div>
+
+
 </div>
