created category bar items

--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -1,6 +1,9 @@
 <%= render "shared/home_banner" %>
 
+<%= render "shared/category_bar" %>
+
 <h2>The top events in <%= @city %></h2>
+
 
 <% @events.each do |event| %>
   <%= render "shared/card", event: event %>
