fixed routes and links

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,8 +42,8 @@
             <% end %>
 
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Home", dashboard_path, class: "dropdown-item" %>
-              <%= link_to "Messages", dashboard_path, class: "dropdown-item" %>
+              <%= link_to "Home", profile_path, class: "dropdown-item" %>
+              <%= link_to "Messages", profile_path, class: "dropdown-item" %>
               <hr>
               <%= link_to "Your Events", events_path, class: "dropdown-item" %>
               <%= link_to "Create Event", new_event_path, class: "dropdown-item" %>
