--- a/app/views/dashboard/profile.html.erb
+++ b/app/views/dashboard/profile.html.erb
@@ -25,7 +25,17 @@
   <hr>
 
   <div class="user-events">
-    <h3>Your Upcoming Events</h3><%= link_to "View All Events", edit_user_registration_path %>
-
+    <h3>Your Upcoming Events</h3>
+    <p>Displays 4 upcoming events user has booked</p>
+    <%= link_to "View All Events", user_events_path %>
   </div>
+
+  <hr>
+
+  <div class="user-groups">
+    <h3>Your Groups</h3>
+    <p>Displays top 4 groups user is a member of</p>
+    <%= link_to "View All Groups", user_groups_path %>
+  </div>
+
 </div>
