--- a/app/views/shared/_home_banner.html.erb
+++ b/app/views/shared/_home_banner.html.erb
@@ -3,5 +3,7 @@
     <h2>Find your new sports group</h2>
     <br>
     <%= link_to "Create Your Event", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+    <br>
+    <%= link_to "Join an Event", new_user_registration_path, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
