update links on profile pages

--- a/app/views/dashboard/user_events.html.erb
+++ b/app/views/dashboard/user_events.html.erb
@@ -1,1 +1,10 @@
-<h2>My Events</h2>
+<div class="container">
+  <h2>My Events</h2>
+
+  <%= link_to "Back to Profile", profile_path %>
+
+  <%= link_to "Attending", profile_path %>
+  <%= link_to "Hosting", profile_path %>
+  <%= link_to "Past Events", profile_path %>
+  
+</div>
