--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,6 +5,26 @@
   data-map-markers-value="<%= @markers.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 
+<div class="category-container">
+    <div class="carousel">
+      <% categories = Event.pluck(:category).uniq %>
+      <% categories.each do |category| %>
+      <%= link_to events_path(query: category) do%>
+        <% category_with_hyphen = category.gsub(" ", "-") %>
+        <div id="<%= category_with_hyphen %>" class="item">
+
+          <h1><%= category %></h1>
+        </div>
+      <% end %>
+      <% end %>
+    </div>
+  </div>
+
+<h2>Results for Tennis in Berlin</h2>
+<%= form_tag do %>
+  <%= select_tag 'city', options_for_select(@cities.map { |city| [city.name, city.id] }), include_blank: true %>
+  <%= submit_tag 'Filter' %>
+<% end %>
 <div class="d-flex justify-content-center">
   <% @events.each do |event| %>
     <%= render "shared/card", event: event %>
