--- a/app/assets/stylesheets/components/_group_info.scss
+++ b/app/assets/stylesheets/components/_group_info.scss
@@ -2,11 +2,14 @@
   background-color: lightgrey;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 8px;
-  padding-bottom: 5px;
+  padding-top: 12px;
   border-radius: 5px;
 }
 
 .btn {
   margin-bottom: 8px;
+}
+
+p{
+  line-height: 0.8;
 }
