--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,14 +1,19 @@
 <div class="container">
-  <% if @group.photo.attached? %>
-    <%= cl_image_tag @group.photo.key, class: "img-fluid", crop: :fill %>
+  <% @group.photos.each do |photo| %>
+    <% if photo %>
+      <%= cl_image_tag photo.key, class: "img-fluid", crop: :fill %>
     <% else %>
-    <img style="width: 100%" src="https://placehold.co/900x600" alt="main image">
+        <img style="width: 100%" src="https://placehold.co/900x600" alt="main image">
+    <% end %>
   <% end %>
-  <h1><strong><%= @group.title %></strong></h1>
+  <h1 class="mt-3"><strong><%= @group.title %></strong></h1>
   <div class="group-info">
     <%= render "shared/group_info" %>
   </div>
-  <div class="group-description">
+  <div class="group-description mb-3">
     <%= render "shared/group_description" %>
+  </div>
+  <div class="members">
+    <%= render "shared/group_members" %>
   </div>
 </div>
