--- a/app/views/shared/_group_info.html.erb
+++ b/app/views/shared/_group_info.html.erb
@@ -1,7 +1,11 @@
-<p> City: <%= @group.city %> </p>
-<p> Members: <%= @users_count %>  | <%= @group.private ? 'Private group' : 'Public group' %></p>
+<p>City: <%= @group.city %> </p>
+<p>Members: <%= @users_count %>  | <%= @group.private ? 'Private group' : 'Public group' %></p>
 <p>Organized by: <strong><%= @creator %></strong></p>
-<p>Share: FB TW IG</p>
+<div class="d-flex">
+  <p>Share: <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
+            <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
+            </p>
+</div>
 <div class="button d-flex justify-content-center">
   <%= link_to "Join Group", group_user_groups_path(@group), data: {turbo_method: :post}, class:"btn btn-primary col-9" %>
 </div>
