--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,8 +11,5 @@
 @import "group_info";
 @import "group_description";
 @import 'message';
-<<<<<<< HEAD
-@import "index_category_bar"
-=======
-@import "group_members";
->>>>>>> master
+@import "index_category_bar";
+@import "group_members"
