--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,4 +11,4 @@
 @import "group_info";
 @import "group_description";
 @import 'message';
-@import "group_members";
+@import "unjoined_group_members";
