--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,14 +7,58 @@
     <% end %>
   <% end %>
   <h1 class="mt-3"><strong><%= @group.title %></strong></h1>
+<!-- GROUP INFO -->
   <div class="group-info">
     <%= render "shared/group_info" %>
   </div>
-  <div class="group-description mb-3">
-    <%= render "shared/group_description" %>
-  </div>
-  <div class="members">
-    <%= render "shared/group_members" %>
+
+<!-- IF JOINED: NAV BAR, ELSE: NOTHING -->
+<% if current_user.groups.include?(@group) %>
+  <ul class="nav nav-tabs d-flex" id="myTab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description" type="button" role="tab" aria-controls="home" aria-selected="true">Description</button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="members-tab" data-bs-toggle="tab" data-bs-target="#members" type="button" role="tab" aria-controls="members" aria-selected="false">Members</button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="events-tab" data-bs-toggle="tab" data-bs-target="#events" type="button" role="tab" aria-controls="events" aria-selected="false">Upcoming Events</button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="chat-tab" data-bs-toggle="tab" data-bs-target="#chat" type="button" role="tab" aria-controls="chat" aria-selected="false">Chat</button>
+  </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">...</div>
+  <div class="tab-pane fade" id="members" role="tabpanel" aria-labelledby="members-tab">...</div>
+  <div class="tab-pane fade" id="events" role="tabpanel" aria-labelledby="events-tab">...</div>
+  <div class="tab-pane fade" id="chat" role="tabpanel" aria-labelledby="chat-tab">...</div>
+</div>
+<% end %>
+<!-- GROUP DESCRIPTION -->
+<div class="group-description mb-3" id="description">
+  <%= render "shared/group_description" %>
+</div>
+<!-- IF JOINED: ALL MEMBERS, IF UNJOINED: SAMPLE OF MEMBERS  -->
+  <div class="members" id="members">
+    <% if current_user.groups.include?(@group) %>
+      <%= render "shared/joined_group_members" %>
+    <% else %>
+      <%= render "shared/unjoined_group_members" %>
+    <% end %>
   </div>
 </div>
-<%= render "posts", posts: @group.posts %>
+<!-- IF JOINED: UPCOMING EVENTS, ELSE: NOTHING -->
+<div id="events">
+  <% if current_user.groups.include?(@group) %>
+    <%= render "shared/upcoming_group_events" %>
+  <% end %>
+</div>
+<!-- IF JOINED: CHAT, ELSE: NOTHING -->
+<div id="chat">
+  <% if current_user.groups.include?(@group) %>
+    <%= render "posts", posts: @group.posts %>
+  <% end %>
+</div>
+
+<!-- record not found error, calendar -->
