--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,13 @@
-<h1>Hello from the Show Page</h1>
+<div class="container">
+  <% @event.photos.each do |photo| %>
+    <% if photo %>
+      <%= cl_image_tag photo.key, class: "img-fluid", crop: :fill %>
+    <% else %>
+        <img style="width: 100%" src="https://placehold.co/900x600" alt="main image">
+    <% end %>
+  <% end %>
+  <h1 class="mt-3"><strong><%= @event.title %></strong></h1>
+</div>
 
 <%= @event.title %>
 
