--- a/app/views/shared/_upcoming_group_events.html.erb
+++ b/app/views/shared/_upcoming_group_events.html.erb
@@ -1,2 +1,2 @@
-<h2>UPCOMING EVENTS</h2>
-<%# render up to 3 cards with upcoming events here %>
+<h5><strong>Upcoming Events</strong></h5><%# render up to 3 cards with upcoming events here %>
+
