--- a/app/views/shared/_joined_group_members.html.erb
+++ b/app/views/shared/_joined_group_members.html.erb
@@ -1,5 +1,5 @@
-<h5>Group members</h5>
-<div class="members-avatars d-flex flex-wrap justify-content-between">
+<h5><strong>Group members</strong></h5>
+<div class="members-avatars d-flex flex-wrap">
   <% @users.each do |user| %>
     <%= cl_image_tag user.photo.key, class: "each-member-avatar mb-2", width: 60, height: 60, crop: :thumb, gravity: :face %>
   <% end %>
