worked on index event page, added query to filter by category and location

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,6 +25,6 @@
 <%# end %>
 <div class="d-flex justify-content-center">
   <% @events.each do |event| %>
-    <%= render "shared/card", event: event %>
+    <%= render "shared/event_card_long", event: event %>
   <% end %>
 </div>
