category filter by location done

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-<h2>Results for Tennis in Berlin</h2>
+<h2>Results for <%= @category%></h2>
 <%# form_tag do %>
   <%# select_tag 'city', options_for_select(@cities), include_blank: true %>
   <%# submit_tag 'Filter' %>
