--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,15 +1,14 @@
-.navbar-lewagon {
+.navbar-teamup {
   justify-content: space-between;
   background: white;
   position: sticky;
   top: 0;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-teamup .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-teamup .navbar-brand img {
+  width: 100px;
 }
-
