--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,61 +1,58 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-  <div class="container-fluid">
+<div class="navbar navbar-expand-sm navbar-light navbar-teamup fixed-top">
+  <nav class="navbar bg-light fixed-top">
+    <div class="container-fluid">
 
-    <div class ="left-side">
-      <% if user_signed_in? %>
-        <%= link_to events_path do %>
-          <div class="navbar-brand d-flex gap-2 align-items-center">
-                <%= image_tag "logo.png", alt: "TeamUp", width: 200 %>
-          </div>
+      <div class ="left-side">
+        <% if user_signed_in? %>
+          <%= link_to events_path do %>
+            <div class="navbar-brand d-flex">
+                  <%= image_tag "teamup_logo.png", alt: "TeamUp", width: 300 %>
+            </div>
+          <% end %>
+        <% else %>
+          <%= link_to root_path do %>
+            <div class="navbar-brand d-flex">
+                <%= image_tag "teamup_logo.png", alt: "TeamUp", width: 300 %>
+            </div>
+          <% end %>
         <% end %>
-      <% else %>
-        <%= link_to root_path do %>
-          <div class="navbar-brand d-flex gap-2 align-items-center">
-            <h3 class="m-0">TeamUp.fun</h3>
-              <%= image_tag "logo.png", alt: "TeamUp", width: 200 %>
-          </div>
-        <% end %>
-      <% end %>
+      </div>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-    </div>
-
-    <div class="collapse navbar-collapse d-flex gap-2" id="navbarSupportedContent">
-      <% if user_signed_in? %>
-        <%= link_to "Create your event", new_event_path, class: "btn btn-warning" %>
-      <% else %>
-        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-warning" %>
-        <%= link_to "Log in", new_user_session_path, class: "btn btn-warning" %>
-      <% end %>
-
-      <ul class="navbar-nav me-auto">
-
-          <li class="nav-item dropdown">
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
             <% if user_signed_in? %>
               <% if current_user.photo.attached? %>
                 <%= cl_image_tag current_user.photo.key, width: 40, height: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, crop: :thumb, gravity: :face %>
+                <h4>Welcome, <%= current_user.first_name.capitalize %> 👋 </h4>
               <% else %>
                 <%= image_tag "placeholder.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
               <% end %>
             <% end %>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
 
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Home", profile_path, class: "dropdown-item" %>
-              <%= link_to "Messages", profile_path, class: "dropdown-item" %>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item"><%= link_to "Your Profile", profile_path %></li>
+              <li class="nav-item"><%= link_to "Messages", profile_path %></li>
               <hr>
-              <%= link_to "Your Events", events_path, class: "dropdown-item" %>
-              <%= link_to "Create Event", new_event_path, class: "dropdown-item" %>
+              <li><%= link_to "Find an Event", events_path, class: "dropdown-item" %></li>
+              <li><%= link_to "Your Events", user_events_path, class: "dropdown-item" %></li>
+              <li><%= link_to "Your Groups", user_groups_path, class: "dropdown-item" %></li>
               <hr>
-              <%= link_to "Your Groups", groups_path, class: "dropdown-item" %>
-              <%= link_to "Create Group", new_group_path, class: "dropdown-item" %>
-              <hr>
-              <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" }, class: "dropdown-item" %>
-            </div>
-          </li>
-      </ul>
+              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" } %></li>
+            </ul>
+            <form class="d-flex mt-3" role="search">
+              <input class="form-control me-2" type="search" placeholder="Find an event..." aria-label="Search">
+              <button class="btn btn-primary" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+
     </div>
-  </div>
+  </nav>
 </div>
