--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -1,5 +1,5 @@
 .home-banner {
-  background-image: asset-url("dan-gold-yhQhvK04QPc-unsplash.jpg");
+  background-image: asset-url("teamup-banner.jpg");
   background-size: cover;
   height: 650px;
   background-position: center;
