worked on events index page and the css, start landing page but only added button

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,4 +13,7 @@
 @import 'message';
 @import "unjoined_group_members";
 @import "event_card_long";
-@import "index_category_bar"
+@import "index_category_bar";
+@import "index_event_card";
+@import "index_events";
+@import "index_map";
