--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -4,6 +4,7 @@
   height: 650px;
   background-position: center;
   padding: 170px 0;
+  background-color: grey;
 }
 
 .home-banner h2 {
@@ -11,6 +12,13 @@
   text-shadow: 2px 2px 5px rgba(240, 240, 240, 0.8);
   font-size: 54px;
   font-weight: bold;
+
+  // Change font to make the h2 pop out of BG image
+  color:#fff;
+  font-size: 60px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .home-banner p {
