--- a/app/assets/stylesheets/components/_index_category_bar.scss
+++ b/app/assets/stylesheets/components/_index_category_bar.scss
@@ -21,7 +21,7 @@ h1{
   height: 50px;
   background: white;
   overflow-x: scroll;
-  padding: 10px;
+  padding-left: 10%px;
   margin: 0;
   white-space: nowrap;
   border-top: 2px solid rgba(0, 0, 0, 0.1);
@@ -34,14 +34,16 @@ h1{
 .item {
   display: inline-block;
   width:70px ;
-  margin: 0 10px;
-  height: 0%;
-  background: rgba(0, 0, 0, 0.05) no-repeat center center;
+  height: 100%;
+  padding-bottom: 10px;
   background-size: cover;
   position:relative;
-  border-radius: 100px;
-  box-shadow: 0 0 10px #dfdfdf;
 }
+
+.item:hover{
+background-color: rgb(142, 57, 1);
+}
+
 .item div{
   width: 100%;
   top:10%;
@@ -57,5 +59,5 @@ h1{
   color: white;
   text-align: center;
   width: 100%;
-  font-size: 0.8em;
+  font-size: 1em;
 }
