--- a/app/views/shared/_category_bar.html.erb
+++ b/app/views/shared/_category_bar.html.erb
@@ -1,5 +1,19 @@
-<div class="category-bar d-flex justify-content-between">
+<%# <div class="category-bar d-flex justify-content-between">
   <% ApplicationRecord::CATEGORIES.each do |category| %>
-    <%= link_to category, events_path(category: category), class: "btn btn-primary" %>
-  <% end %>
-</div>
+    <%#link_to category, events_path(query: category), class: "btn btn-primary" %>
+  <%# end %>
+<%# </div> %>
+
+
+  <div class="category-container">
+    <div class="index-category-bar">
+      <% categories = Event.pluck(:category).uniq %>
+      <% categories.each do |category| %>
+        <%= link_to events_path(query: category) do %>
+          <div id="<%= category %>" class="item">
+            <h1><%= category %></h1>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
