dashboard nav and pages done

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,7 +1,15 @@
 .welcome-header {
-
+  margin: 50px;
 }
 
-.user-bio p {
-  line-height: ;
+.user-profile {
+  margin: 30px;
+}
+
+.user-img {
+  width: 50%;
+}
+
+.welcome-header icon {
+  color: aqua;
 }
