--- a/app/views/dashboard/user_events.html.erb
+++ b/app/views/dashboard/user_events.html.erb
@@ -1,10 +1,33 @@
-<div class="container">
-  <h2>My Events</h2>
+<div class="container mt-4">
+  <h2 class="mb-2">My Events</h2>
 
-  <%= link_to "Back to Profile", profile_path %>
+  <ul class="nav nav-tabs overflow-wrap" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="attending-tab" data-bs-toggle="tab" data-bs-target="#attending" type="button" role="tab" aria-controls="attending" aria-selected="true">Attending</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="hosting-tab" data-bs-toggle="tab" data-bs-target="#hosting" type="button" role="tab" aria-controls="hosting" aria-selected="false">Hosting</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="past-tab" data-bs-toggle="tab" data-bs-target="#past" type="button" role="tab" aria-controls="past" aria-selected="false">Past</button>
+    </li>
+  </ul>
 
-  <%= link_to "Attending", profile_path %>
-  <%= link_to "Hosting", profile_path %>
-  <%= link_to "Past Events", profile_path %>
-  
+  <div class="tab-content" id="myTabContent">
+
+  <div class="tab-pane fade show active mt-3" id="attending" role="tabpanel" aria-labelledby="attending-tab">
+    <p>Attending events displayed here</p>
+  </div>
+
+  <div class="tab-pane fade mt-3" id="hosting" role="tabpanel" aria-labelledby="hosting-tab">
+    <p>Hosting events displayed here</p>
+  </div>
+
+  <div class="tab-pane fade mt-3" id="past" role="tabpanel" aria-labelledby="past-tab">
+    <p>Past events displayed here</p>
+  </div>
+
+  <div class="text-center">
+    <%= link_to "Back to Profile", profile_path, class: "btn btn-outline-primary" %>
+  </div>
 </div>
