--- a/app/views/dashboard/user_groups.html.erb
+++ b/app/views/dashboard/user_groups.html.erb
@@ -1,9 +1,26 @@
-<div class="container">
-  <h2>My Groups</h2>
+<div class="container mt-4">
+  <h2 class="mb-2">My Groups</h2>
 
-  <%= link_to "Back to Profile", profile_path %>
+  <ul class="nav nav-tabs overflow-wrap" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="member-tab" data-bs-toggle="tab" data-bs-target="#member" type="button" role="tab" aria-controls="member" aria-selected="true">Member</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="organiser-tab" data-bs-toggle="tab" data-bs-target="#organiser" type="button" role="tab" aria-controls="organiser" aria-selected="false">Organiser</button>
+    </li>
+  </ul>
 
-  <%= link_to "Member", profile_path %>
-  <%= link_to "Oraniser", profile_path %>
-  
+  <div class="tab-content" id="myTabContent">
+
+  <div class="tab-pane fade show active mt-3" id="member" role="tabpanel" aria-labelledby="member-tab">
+    <p>Groups I'm a member displayed here</p>
+  </div>
+
+  <div class="tab-pane fade mt-3" id="organiser" role="tabpanel" aria-labelledby="organiser-tab">
+    <p>GRoups I'm organising displayed here</p>
+  </div>
+
+  <div class="text-center">
+    <%= link_to "Back to Profile", profile_path, class: "btn btn-outline-primary" %>
+  </div>
 </div>
