added withelist to landing page, in pages controller

--- a/app/views/shared/_home_banner.html.erb
+++ b/app/views/shared/_home_banner.html.erb
@@ -4,6 +4,6 @@
     <br>
     <%= link_to "Create Your Event", new_user_registration_path, class: "btn btn-primary btn-lg" %>
     <br>
-    <%= link_to "Find an Event", events_path, class: "btn btn-primary btn-lg" %>
+    <%= link_to "Find an Event", new_user_registration_path, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
